Update some cases of Java9-deprecated code